--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -71,7 +71,16 @@
     <ClCompile Include="$(VC_CTP_Nov2013_InstallDir)\crt\src\threadsafestatics.cpp">
       <ExcludedFromBuild Condition="$(PlatformToolset) != 'CTP_Nov2013'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\block.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\block.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\block_header.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\opcode.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\operation.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\point.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\script.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\transaction.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\transaction_input.cpp" />
+    <ClCompile Include="..\..\..\..\src\chain\transaction_output.cpp" />
+    <ClCompile Include="..\..\..\..\src\conditional_stack.cpp" />
     <ClCompile Include="..\..\..\..\src\config\authority.cpp" />
     <ClCompile Include="..\..\..\..\src\config\btc256.cpp" />
     <ClCompile Include="..\..\..\..\src\config\checkpoint.cpp" />
@@ -81,6 +90,7 @@
     <ClCompile Include="..\..\..\..\src\config\printer.cpp" />
     <ClCompile Include="..\..\..\..\src\constants.cpp" />
     <ClCompile Include="..\..\..\..\src\error.cpp" />
+    <ClCompile Include="..\..\..\..\src\evaluation_context.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base10.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base16.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base58.cpp" />
@@ -102,6 +112,18 @@
     <ClCompile Include="..\..\..\..\src\math\script_number.cpp" />
     <ClCompile Include="..\..\..\..\src\math\secp256k1_initializer.cpp" />
     <ClCompile Include="..\..\..\..\src\math\uint256.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\address.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\announce_version.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\get_address.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\get_blocks.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\get_data.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\header.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\inventory.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\inventory_type_id.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\inventory_vector.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\network_address.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\nonce.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\verack.cpp" />
     <ClCompile Include="..\..\..\..\src\network\acceptor.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel_proxy.cpp" />
@@ -113,10 +135,6 @@
     <ClCompile Include="..\..\..\..\src\network\protocol.cpp" />
     <ClCompile Include="..\..\..\..\src\network\seeder.cpp" />
     <ClCompile Include="..\..\..\..\src\network\timeout.cpp" />
-    <ClCompile Include="..\..\..\..\src\satoshi_serialize.cpp" />
-    <ClCompile Include="..\..\..\..\src\script.cpp" />
-    <ClCompile Include="..\..\..\..\src\stealth.cpp" />
-    <ClCompile Include="..\..\..\..\src\transaction.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ifstream.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ofstream.cpp" />
@@ -126,23 +144,38 @@
     <ClCompile Include="..\..\..\..\src\unicode\unicode_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\sequencer.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\binary.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\istream_reader.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\random.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\string.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\logger.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\ostream_writer.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\string.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\thread.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\threadpool.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\address.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\variable_uint_size.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\dictionary.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\hd_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\key_formats.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\message.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\mnemonic.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\payment_address.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\select_outputs.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\stealth_address.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\uri.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\dictionary.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\block.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\block.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\block_header.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\opcode.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\operation.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\payment.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\point.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\script.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\transaction.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\transaction_input.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\transaction_output.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\compat.h" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\compat.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\authority.hpp" />
@@ -168,6 +201,18 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\script_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\secp256k1_initializer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\uint256.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\announce_version.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_blocks.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_data.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\header.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\inventory.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\inventory_type_id.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\inventory_vector.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\network_address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\nonce.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\verack.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\acceptor.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel_loader_module.hpp" />
@@ -182,11 +227,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\settings.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\primitives.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\satoshi_serialize.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\stealth.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\transaction.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\binary_trie.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_iterator.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_reverse_iterator.hpp" />
@@ -205,26 +245,39 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\sequencer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\binary.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\collection.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\container_sink.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\container_source.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\data.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\decorator.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\deserializer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\endian.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\exceptions.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\istream_reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\random.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\string.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\logger.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\ostream_writer.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\serializer.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\string.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\subscriber.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\thread.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\threadpool.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\timer.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\variable_uint_size.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\writer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\version.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\dictionary.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\key_formats.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\message.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\dictionary.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\mnemonic.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\payment_address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\select_outputs.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri.hpp" />
+    <ClInclude Include="..\..\..\..\src\conditional_stack.hpp" />
+    <ClInclude Include="..\..\..\..\src\evaluation_context.hpp" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha256.h" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha512.h" />
     <ClInclude Include="..\..\..\..\src\math\external\pkcs5_pbkdf2.h" />
@@ -237,8 +290,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base16.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\serialize\block.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\serialize\misc.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\binary_trie.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_iterator.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_reverse_iterator.ipp" />
@@ -247,7 +298,10 @@
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\array_slice.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\collection.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\data.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\deserializer.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\endian.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\istream_reader.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\ostream_writer.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\serializer.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\subscriber.ipp" />
     <None Include="packages.config" />
