--- a/Makefile.am
+++ b/Makefile.am
@@ -86,6 +86,7 @@ src_libbitcoin_la_SOURCES = \
     src/network/network.cpp \
     src/network/protocol.cpp \
     src/network/seeder.cpp \
+    src/network/timeout.cpp \
     src/unicode/console_streambuf.cpp \
     src/unicode/ifstream.cpp \
     src/unicode/ofstream.cpp \
@@ -255,7 +256,8 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/network.hpp \
     include/bitcoin/bitcoin/network/protocol.hpp \
     include/bitcoin/bitcoin/network/seeder.hpp \
-    include/bitcoin/bitcoin/network/shared_const_buffer.hpp
+    include/bitcoin/bitcoin/network/shared_const_buffer.hpp \
+    include/bitcoin/bitcoin/network/timeout.hpp
 
 include_bitcoin_bitcoin_triedir = ${includedir}/bitcoin/bitcoin/trie
 include_bitcoin_bitcoin_trie_HEADERS = \
