--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="..\..\..\..\src\network\connect_with_timeout.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol.cpp" />
     <ClCompile Include="..\..\..\..\src\network\seeder.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\timeout.cpp" />
     <ClCompile Include="..\..\..\..\src\satoshi_serialize.cpp" />
     <ClCompile Include="..\..\..\..\src\script.cpp" />
     <ClCompile Include="..\..\..\..\src\stealth.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\seeder.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\primitives.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\satoshi_serialize.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script.hpp" />
